--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -70,6 +70,8 @@
             android:layout_width="fill_parent"
             android:layout_height="20dp"
             android:src="@drawable/home_spliter"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:layout_marginBottom="10dp"
             android:scaleType="fitXY" />
 
