--- a/app/src/main/res/layout/item_packge.xml
+++ b/app/src/main/res/layout/item_packge.xml
@@ -20,16 +20,43 @@
         android:layout_toLeftOf="@+id/item_price"
         android:layout_toRightOf="@+id/item_thumbnail"
         android:layout_toEndOf="@+id/item_thumbnail">
-
-
+        <TableRow android:layout_weight="1">
+            <LinearLayout android:orientation="horizontal"  android:gravity="center_vertical">
+                <ImageView android:layout_height="20dp" android:layout_width="20dp" android:src="#00FF00"/>
+                <TextView  android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="package name"/>
+            </LinearLayout>
+        </TableRow>
+        <TableRow android:layout_weight="1">
+            <TextView android:text="package name"/>
+        </TableRow>
+        <TableRow android:layout_weight="1">
+            <LinearLayout android:orientation="horizontal"  android:gravity="center_vertical">
+                <ImageView android:layout_height="20dp" android:layout_width="20dp" android:src="#0000FF"/>
+                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="package name"/>
+            </LinearLayout>
+        </TableRow>
     </TableLayout>
 
-    <TextView
+    <LinearLayout
         android:id="@+id/item_price"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:text="0.00"/>
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="$"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="000"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="起"/>
+    </LinearLayout>
 
 </RelativeLayout>
