Basic layout finished
Need more work to make it look better

--- a/app/src/main/res/layout/activity_packagelist.xml
+++ b/app/src/main/res/layout/activity_packagelist.xml
@@ -46,6 +46,7 @@
 
         </RelativeLayout>
         <ListView
+            android:id="@+id/pkgls_list"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:divider="@drawable/pkgls_divider"
