--- a/app/src/main/res/layout/activity_pending_order_list.xml
+++ b/app/src/main/res/layout/activity_pending_order_list.xml
@@ -8,13 +8,58 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#FFFFFF"
+    android:orientation="vertical"
     tools:context="com.naild2d.android.PendingOrderList">
 
     <com.naild2d.android.component.PriceTextView
         android:id="@+id/item_pending_order_list_price"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         app:price="200.00"/>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="15dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <com.naild2d.android.component.ImageTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center_vertical"
+                app:text="详细地址"
+                app:textSize="20"
+                app:textColor="#F6947B"/>
+            <ImageView
+                android:id="@+id/right_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/right_arrow_pink"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="东花市北里8号楼..."
+                android:layout_gravity="center_vertical"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/right_arrow"
+                android:layout_toStartOf="@+id/right_arrow"
+                android:textSize="17sp"
+                android:textColor="#000000"
+                android:layout_marginRight="15dp"/>
+        </RelativeLayout>
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:src="@drawable/underline_black"
+            android:layout_marginTop="15dp"/>
+    </LinearLayout>
 
 </LinearLayout>
