--- a/app/src/main/res/layout/component_image_text_view.xml
+++ b/app/src/main/res/layout/component_image_text_view.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/component_image_text_view_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:scaleType="centerInside"
         android:layout_gravity="center_vertical"
         android:background="@drawable/pkgls_icon_name_normal"/>
@@ -17,5 +17,5 @@
         android:textColor="#DDDDDD"
         android:text="ImageTextView"
         android:textSize="22sp"
-        android:layout_marginLeft="15dp"/>
+        android:layout_marginLeft="10dp"/>
 </LinearLayout>
