--- a/app/src/main/res/layout/component_price_textview.xml
+++ b/app/src/main/res/layout/component_price_textview.xml
@@ -3,10 +3,10 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FF0000">
+    android:background="@android:color/transparent">
     <ImageView
-        android:layout_width="12dp"
-        android:layout_height="16dp"
+        android:layout_width="8dp"
+        android:layout_height="11dp"
         android:scaleType="centerInside"
         android:layout_gravity="center_vertical"
         android:background="@drawable/icon_yuan_black"/>
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:textColor="#000000"
-        android:textSize="23sp"
-        android:layout_marginLeft="3dp"
+        android:textSize="16sp"
+        android:layout_marginLeft="2dp"
         android:text="0.00"/>
 </LinearLayout>
