--- a/app/src/main/res/layout/activity_pending_order_list.xml
+++ b/app/src/main/res/layout/activity_pending_order_list.xml
@@ -7,15 +7,146 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#FFFFFF"
+    android:background="@drawable/bg_01"
     android:orientation="vertical"
     tools:context="com.naild2d.android.PendingOrderList">
 
-    <com.naild2d.android.component.PriceTextView
-        android:id="@+id/item_pending_order_list_price"
+    <RelativeLayout
+        android:id="@+id/home_head_bar"
+        android:layout_width="fill_parent"
+        android:layout_height="65dp"
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp"
+        android:paddingTop="5dp"
+        android:background="@drawable/pkgls_top_bar">
+
+        <ImageButton
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginLeft="10dp"
+            android:layout_centerInParent="true"
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/pkgls_back"
+            android:scaleType="centerInside"
+            android:background="@android:color/transparent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="预约填单"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:background="@android:color/transparent" />
+
+        <ImageButton
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginRight="10dp"
+            android:layout_centerInParent="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/icon_profile_white"
+            android:scaleType="centerInside"
+            android:background="@android:color/transparent" />
+    </RelativeLayout>
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        app:price="200.00"/>
+        android:orientation="vertical"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="50dp">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="#FF0000"
+                android:id="@+id/imageView"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="5dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="地中海小香风"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/imageView"
+                android:layout_toEndOf="@+id/imageView"
+                android:layout_marginLeft="5dp"
+                android:textSize="14sp"
+                android:textColor="#000000"/>
+
+            <EditText
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:text="1"
+                android:textSize="16sp"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:id="@+id/editText"
+                android:layout_marginRight="5dp"
+                android:background="#F7F7F7"
+                android:gravity="center"/>
+
+            <com.naild2d.android.component.PriceTextView
+                android:id="@+id/item_pending_order_list_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:price="200.00"
+                android:layout_centerInParent="true"
+                android:layout_toLeftOf="@+id/editText"
+                android:layout_toStartOf="@+id/editText"
+                android:layout_marginRight="10dp"/>
+        </RelativeLayout>
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:src="@drawable/underline_black"
+            android:layout_marginTop="15dp"/>
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingRight="15dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="#F7F7F7">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="合计"
+            android:textColor="#F6947B"
+            android:textSize="20sp"
+            android:layout_centerInParent="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+        <ImageView
+            android:layout_width="11dp"
+            android:layout_height="20dp"
+            android:src="@drawable/icon_yuan_pink"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/textView"
+            android:layout_toStartOf="@+id/textView" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="349"
+            android:textColor="#F6947B"
+            android:textSize="20sp"
+            android:layout_centerInParent="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="3dp"
+            android:id="@+id/textView" />
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -34,12 +165,13 @@
                 android:layout_centerInParent="true"
                 android:layout_gravity="center_vertical"
                 app:text="详细地址"
-                app:textSize="20"
-                app:textColor="#F6947B"/>
+                app:textSize="18"
+                app:textColor="#F6947B"
+                app:image="@drawable/icon_location_pink"/>
             <ImageView
                 android:id="@+id/right_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 android:src="@drawable/right_arrow_pink"
                 android:layout_alignParentRight="true"
                 android:layout_centerInParent="true"/>
@@ -51,9 +183,9 @@
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/right_arrow"
                 android:layout_toStartOf="@+id/right_arrow"
-                android:textSize="17sp"
+                android:textSize="14sp"
                 android:textColor="#000000"
-                android:layout_marginRight="15dp"/>
+                android:layout_marginRight="5dp"/>
         </RelativeLayout>
         <ImageView
             android:layout_width="fill_parent"
@@ -61,5 +193,105 @@
             android:src="@drawable/underline_black"
             android:layout_marginTop="15dp"/>
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="15dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <com.naild2d.android.component.ImageTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center_vertical"
+                app:text="预约时间"
+                app:textSize="18"
+                app:textColor="#F6947B"
+                app:image="@drawable/icon_clock_pink"/>
+            <ImageView
+                android:id="@+id/right_arrow1"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:src="@drawable/right_arrow_pink"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3月7日 18:00"
+                android:layout_gravity="center_vertical"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/right_arrow1"
+                android:layout_toStartOf="@+id/right_arrow1"
+                android:textSize="14sp"
+                android:textColor="#000000"
+                android:layout_marginRight="5dp"/>
+        </RelativeLayout>
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:src="@drawable/underline_black"
+            android:layout_marginTop="15dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="15dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <com.naild2d.android.component.ImageTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center_vertical"
+                app:text="备注"
+                app:textSize="18"
+                app:textColor="#F6947B"
+                app:image="@drawable/icon_notebook_pink"/>
+            <ImageView
+                android:id="@+id/right_arrow2"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:src="@drawable/right_arrow_pink"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="请不要迟到呦~"
+                android:layout_gravity="center_vertical"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/right_arrow2"
+                android:layout_toStartOf="@+id/right_arrow2"
+                android:textSize="14sp"
+                android:textColor="#000000"
+                android:layout_marginRight="5dp"/>
+        </RelativeLayout>
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:src="@drawable/underline_black"
+            android:layout_marginTop="15dp"/>
+    </LinearLayout>
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:text="下单"
+        android:textSize="18sp"
+        android:layout_marginTop="5dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/btn_shuicai_pink"/>
 </LinearLayout>
