--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -40,7 +40,6 @@
             android:background="@android:color/transparent" />
     </RelativeLayout>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent">
@@ -113,19 +112,36 @@
         <RelativeLayout
             android:id="@+id/item_price"
             android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true">
-            <com.naild2d.android.component.PriceTextView
+            android:layout_height="60dp"
+            android:layout_centerVertical="true"
+            android:layout_alignTop="@+id/item_info"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/item_order_details_price"
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:price="200"
-                app:textSize="16"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="10dp"
-                android:layout_alignParentRight="true"/>
-
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:background="@android:color/transparent">
+                <ImageView
+                    android:id="@+id/component_price_textView_yuan"
+                    android:layout_width="5dp"
+                    android:layout_height="8dp"
+                    android:scaleType="centerInside"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/icon_yuan_black"/>
+                <TextView
+                    android:id="@+id/component_price_textview_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="#000000"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="1dp"
+                    android:text="139"/>
+            </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
