--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:background="@drawable/bg_01"
-    tools:context="com.naild2d.android.OrderDetails"
+    tools:context="com.naild2d.android.OrderDetailsActivity"
     >
 
     <RelativeLayout
