--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -42,17 +41,16 @@
         android:layout_below="@+id/txtCode"
         android:onClick="newUser"
         android:text="New" />
-    <!--
-       <com.naild2d.android.component.OrderDatePanelView
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content">
 
-           </com.naild2d.android.component.OrderDatePanelView>
-   -->
-    <com.naild2d.android.component.ServiceThumbnailView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:integer_price="126"
-        app:name="####"
-        app:thumbnail="#FF0000" />
+    <Button
+        android:id="@+id/btnTestApi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/btnNew"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/btnNew"
+        android:layout_below="@+id/btnNew"
+        android:onClick="testApi"
+        android:text="TEST API" />
 </RelativeLayout>
